--- a/CUDA_0/CUDA_0.vcxproj
+++ b/CUDA_0/CUDA_0.vcxproj
@@ -153,7 +153,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="test_cuda.cu" />
+    <CudaCompile Include="device_query.cu" />
+    <CudaCompile Include="test_cuda.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </CudaCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
