ch5 shared memory

--- a/CUDA_Ch5_Thread/CUDA_Ch5_Thread.vcxproj
+++ b/CUDA_Ch5_Thread/CUDA_Ch5_Thread.vcxproj
@@ -155,8 +155,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="cuda_vector_add_long.cu" />
+    <CudaCompile Include="cuda_vector_add_long.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
     <CudaCompile Include="cuda_vector_add_thread.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
+    <CudaCompile Include="dot_product_shared_memory.cu" />
+    <CudaCompile Include="ripple.cu">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </CudaCompile>
   </ItemGroup>
