Ch10 stream done

--- a/CUDA_Ch10_Stream/CUDA_Ch10_Stream.vcxproj
+++ b/CUDA_Ch10_Stream/CUDA_Ch10_Stream.vcxproj
@@ -155,7 +155,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="copy_time_compare.cu" />
+    <CudaCompile Include="copy_time_compare.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
+    <CudaCompile Include="double_stream.cu" />
+    <CudaCompile Include="single_stream.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
